--- a/Instagram-Clone/src/main/res/values/strings.xml
+++ b/Instagram-Clone/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_rider">Map</string>
     <string name="title_activity_driver_location">Map</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign in</string>
+    <string name="or_login">Or, Login</string>
 </resources>
