--- a/Instagram-Clone/src/main/res/values/strings.xml
+++ b/Instagram-Clone/src/main/res/values/strings.xml
@@ -18,6 +18,13 @@
     <string name="title_activity_driver_location">Map</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
-    <string name="sign_in">Sign in</string>
+    <string name="sign_up">Sign up</string>
     <string name="or_login">Or, Login</string>
+    <string name="login">Login</string>
+    <string name="please_enter_your_username">Please enter your username</string>
+    <string name="please_enter_your_password">Please enter your password</string>
+    <string name="your_are_successfully_sign_up">You are successfully sign up!</string>
+    <string name="user_with_such_user_name_are_already_registered">User with such username are already registered</string>
+    <string name="login_failed">Login failed</string>
+    <string name="your_are_successfully_loged_in">Your are successfully loged in</string>
 </resources>
